--- a/css/menu_topexpand.css
+++ b/css/menu_topexpand.css
@@ -1,7 +1,7 @@
 /* === FROM DEMO CSS === */
 
 a {
-	color: #4e4a46;
+	color: #fff;
 	text-decoration: none;
 	outline: none;
 }
@@ -26,7 +26,7 @@ body,
 }
 
 .menu-wrap a {
-	color: #555d7c;
+	color: #95a5a6;
 }
 
 .menu-wrap a:hover,
@@ -67,8 +67,8 @@ body,
 	padding: 0;
 	border: none;
 	text-indent: 2.5em;
-	color: transparent;
-/*	background: #8a92b3;*/
+/*	color: transparent;
+	background: #8a92b3;*/
 }
 
 .menu-button::before {
@@ -88,7 +88,7 @@ body,
 /* Menu */
 .menu-wrap {
 	z-index: 999;
-	background: #8a92b3;
+	background: #34495e;
 	-webkit-transition: width 0.4s, height 0.4s, -webkit-transform 0.4s;
 	transition: width 0.4s, height 0.4s, transform 0.4s;
 	-webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
@@ -102,8 +102,9 @@ body,
 }
 
 .icon-list {
-	float: right;
-	padding: 2.5em 2em 0 6em;
+/*	float: right;*/
+	text-align: center;
+	padding: 2.0em 2em 0 2em;
 }
 
 .icon-list a {
@@ -125,10 +126,15 @@ body,
 }
 
 @media screen and (max-width: 50em) {
+	.icon-list {
+		margin-left: 4em;
+		padding-top: 1.75em;
+	}
+
 	.icon-list a {
 		padding: 0.5em 0em;
 		margin: 0 5px;
-		font-size: 1em;
+		font-size: 1.5em;
 	}
 	.icon-list a span {
 		display: none;
